pom.xml changes for v0.4 customization added

--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>ege</artifactId>
-    <groupId>pl.psnc.dl.ege</groupId>
-    <version>0.5.0</version>
-  </parent>
   <groupId>pl.psnc.dl.ege</groupId>
   <artifactId>ege-framework</artifactId>
-  <version>0.3</version>
+  <version>0.4</version>
   <name>EGE Framework</name>
   <properties>
 
@@ -88,6 +83,16 @@
       </roles>
       <organization>PSNC</organization>
     </developer>
+    <developer>
+      <id>roewenstrunk</id>
+      <name>Daniel Röwenstrunk</name>
+      <email>roewenstrunk@uni-paderborn.de</email>
+      <roles>
+        <role>Stakeholder</role>
+	    <role>Developer</role>
+      </roles>
+      <organization>Paderborn University</organization>
+    </developer>
   </developers>
   <reporting>
     <plugins>
@@ -139,7 +144,7 @@
     <dependency>
       <groupId>pl.psnc.dl.ege</groupId>
       <artifactId>ege-api</artifactId>
-      <version>0.2.1</version>
+      <version>0.3.0</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
