--- a/pom.xml
+++ b/pom.xml
@@ -171,10 +171,10 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>jpf-tools</groupId>
+      <groupId>net.sf.jpf</groupId>
       <artifactId>jpf-tools</artifactId>
       <version>1.5.1</version>
-    </dependency>
+    </dependency> 
     <dependency>
       <groupId>net.sf.jpf</groupId>
       <artifactId>jpf-boot</artifactId>
