--- a/pom.xml
+++ b/pom.xml
@@ -218,4 +218,11 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+<distributionManagement>
+   <repository>
+     <id>github</id>
+     <name>GitHub anneferger Apache Maven Packages</name>
+     <url>https://maven.pkg.github.com/teic/ege-framework</url>
+   </repository>
+</distributionManagement>
 </project>
