--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,23 @@
       <scope>compile</scope>
     </dependency>
   </dependencies>
+   <repositories>
+		<repository>
+			<id>central</id>
+			<name>central</name>
+			<url>https://repo.maven.apache.org/maven2/</url>
+		</repository>
+		<repository>
+			<id>edirom</id>
+			<name>Edirom</name>
+			<url>https://maven.pkg.github.com/Edirom/*</url>
+		</repository>
+                <repository>
+			<id>teic</id>
+			<name>TEIC</name>
+			<url>https://maven.pkg.github.com/TEIC/*</url>
+		</repository>
+	</repositories>   
 <distributionManagement>
    <repository>
      <id>github</id>
